<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_fragment_home_telfs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/contenedor_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/tv_fragment_home_telfs">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:layout_marginEnd="16dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_telfs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_below="@id/contenedor_spinner"/>

    <TextView
        android:id="@+id/tv_no_disponible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/no_disponible"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_below="@id/contenedor_spinner"/>

</RelativeLayout>